--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -14,12 +14,12 @@
 
 @font-face {
      font-family: outfit;
-     src: url(/assets/fonts/outfit/Outfit-VariableFont_wght.ttf) ;
+     src: url(./assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
 }
 
 @font-face {
      font-family: young-serif;
-     src: url(/assets/fonts/young-serif/YoungSerif-Regular.ttf);
+     src: url(./assets/fonts/young-serif/YoungSerif-Regular.ttf);
 }
 
 
@@ -71,7 +71,13 @@ body{
      padding: 0 4px;
 }
 
-
+.recipeImage{
+     width: 100%;
+     height: 250px;
+     border-radius: 18px;
+     object-fit: cover;
+     margin-top: 2vh;
+}
 
 .recipeName{
      font-family: young-serif;
