--- a/article-preview-component-master/style.css
+++ b/article-preview-component-master/style.css
@@ -59,7 +59,7 @@ html,body{width: 100%;height: 100%;}
      padding: 0 1.5rem;
 }
 
-.article .content p{
+.article .contentP{
      font-size: 12px;
      color: var(--GrayishBlue);
      padding: 0 1.5rem;
@@ -67,39 +67,45 @@ html,body{width: 100%;height: 100%;}
 }
 
 .profile{
+     display: flex  ;
+     flex-direction: column;
      min-height:12vh;
-     display: flex;
-     align-items: center;
-     background-color: red;
      margin-top: 15px;
      overflow: hidden;
+}    
+
+.firstDiv{
+     min-height:inherit;
+     display: flex;
+     padding: 0 1.5rem;
 }
 
-.profile .avatar{
+
+.firstDiv .avatar{
      width: 40px;
      height: 40px;
      border-radius: 50%;
 }
 
-.profile .text{
+.firstDiv .text{
      margin-left:12px;
      font-size: 10px;
      color: var(--VeryDarkGrayishBlue);
 }
 
 
-
-.profile .svg{ 
+.svg{ 
      margin-left: auto;
      cursor: pointer;
-     width: 30px;
-     height: 30px;
+     width: 35px;
+     height: 35px;
      background: var(--LightGrayishBlue);
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: hidden;
+     position: relative;
 }
 
 .shareSvg{
@@ -109,11 +115,25 @@ html,body{width: 100%;height: 100%;}
 
 .svg:active{
      background-color: var(--DesaturatedDarkBlue);
+} 
+
+ .socialLink{
+     width: inherit;
+     min-height: inherit;
+     background-color: var(--VeryDarkGrayishBlue);
+     padding: 0 1.5rem;
+     display: flex;
+     align-items: center;
+     gap: 20px;
+     overflow: hidden;
+}
+ 
+.socialLink .p{
+     font-size: 1rem;
+       color: var(--GrayishBlue);
+       text-transform: uppercase;
+       letter-spacing: 2px;
 }
 
-.bouncing{
-     width: 100%;
-     min-height: inherit;
-     background-color: yellow;
-}
+
 
