--- a/article-preview-component-master/style.css
+++ b/article-preview-component-master/style.css
@@ -25,9 +25,9 @@ html,body{width: 100%;height: 100%;}
 
 .article{
   width: 80%;
-  max-width: 350px;
+  max-width: 400px;
   min-height: 80vh;
-  max-height:500px;
+  max-height:600px;
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
@@ -54,13 +54,13 @@ html,body{width: 100%;height: 100%;}
 }
 
 .article .content h1{
-     font-size: var(--fontFamily);
+     font-size: clamp(1rem, 1.4vw, 2rem);
      color: var(--VeryDarkGrayishBlue);
      padding: 0 1.5rem;
 }
 
 .article .contentP{
-     font-size: 12px;
+     font-size: clamp(1rem, 1vw, 1.2rem);
      color: var(--GrayishBlue);
      padding: 0 1.5rem;
 
@@ -135,5 +135,27 @@ html,body{width: 100%;height: 100%;}
        letter-spacing: 2px;
 }
 
+.toggle{
+     display: none;
+}
 
 
+@media screen and (min-width: 1024px){
+
+     .article{
+         width: 80%;
+         max-width: 700px;
+         min-height: 30vh;
+         flex-direction: row;
+
+}
+.article .img{
+     width: 120%;
+}
+
+.content{
+     justify-content: space-between;
+}
+
+     
+}
